--- a/index.html
+++ b/index.html
@@ -100,14 +100,11 @@
     <footer>
         <a href="index.html">WebStudio</a>
         
-        <address>
+        <address>г. Киев, пр-т Леси Украинки, 26</address>
             <ul>
-                <li>г. Киев, пр-т Леси Украинки, 26</li>
                 <li><a href="mailto:info@example.com">info@example.com</a></li>
                 <li><a href="tel+380961111111">+38 096 111 11 11</a></li>
             </ul>
-        </address>
-
     </footer>
 </body>
 </html>
